--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,9 @@ body {
     height: 30%;
     margin: 5px;
 }
+
 .navbar-collapse {
-    background-color:var(--navbarBgColor); 
+    background-color: var(--navbarBgColor);
 }
 
 .navbar-nav {
@@ -99,12 +100,20 @@ body {
 }
 
 .carousel-caption .btn {
+    color: #fff;
     font-size: 200%;
     margin: 5px auto;
     font-weight: 400;
     height: 60px;
+    border-radius: 10px;
+    box-shadow: 0 0 25px rgba(255, 251, 251, 0.986);
+
 }
 
+.carousel-caption .btn:hover {
+    background-color: #f4873b;
+
+}
 
 
 
@@ -123,7 +132,6 @@ body {
 
 .my-col {
     margin: 20px 10px 20px 10px;
-
     border-radius: 15px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
 
@@ -203,7 +211,7 @@ button[type="submit"] {
 
 /*----------------------------footer*/
 .footer-container {
-   background-color:var(--bodyContainerColor);
+    background-color: var(--bodyContainerColor);
 }
 
 .footer-outer {
@@ -518,7 +526,7 @@ button[type="submit"] {
     }
 
     .newsletterInfo h5 {
-        font-size: 14px;
+        font-size: 13px;
 
     }
 
@@ -527,10 +535,28 @@ button[type="submit"] {
     }
 
     button[type="submit"] {
-        margin: 5px 25% 20px 30%;
-        font-size: small;
+        margin: 5px 5% 20px 20%;
+        font-size: 12px;
 
+    }
 
+    .center-form {
+        padding-top: 5px;
+    }
+
+    .form-control {
+
+        font-size: 12px;
+        padding: 5px 40px 5px 10px;
+        width: 130%;
+        height: 28px;
+        margin-left: -20px;
+    }
+
+    .col #b-outer {
+        margin-top: 0px;
+        font-size: 12px;
+        padding: 3px 30px;
     }
 
 
@@ -541,5 +567,18 @@ button[type="submit"] {
 
     .list-inline {
         margin: 10px 60px 10px 5px;
+    }
+}
+
+/* --------------------------------------------------------------------mxa-width:350px */
+
+
+@media only screen and (max-width: 350px) {
+    .footer-outer {
+        padding: 0px;
+    }
+
+    .list-inline {
+        margin: 10px 40px 10px 5px;
     }
 }
